--- a/Style.css
+++ b/Style.css
@@ -3,12 +3,15 @@
   padding :0;
 }
 
-#container {
-  touch-action: none;
-}
-
- .imgcontainer img {  
+/* team image */
+.imgcontainer img {  
   width : 100wh; 
   height : 100vh; 
   overflow: auto;
  }
+
+/* animated bg */
+#container {
+  touch-action: none;
+}
+
