--- a/Style.css
+++ b/Style.css
@@ -16,15 +16,25 @@ html,body{
   overflow: auto;
  }
 
+ .grid-items{
+  grid-row:1;
+  grid-column: 1;
+ }
+
+ /* our team */
  h1{
   text-align: center;
   font-size: 100px;
  }
 
- .grid-items{
-  grid-row:1;
-  grid-column: 1;
- }
+ul.our-team li {
+  list-style: none;
+  color: #222121;
+  display: inline;
+  letter-spacing: 15px;
+  animation: pre-load 3s linear infinite;
+}
+
 
 /* animated bg */
 #container {
@@ -43,4 +53,76 @@ html,body{
 }
 .team h1{
   padding: 2rem 0rem;
+}
+
+/* animation */
+@keyframes pre-load {
+  
+  0% {
+    color: black;
+    text-shadow: none;
+  }
+  
+  20% {
+    color: black;
+    text-shadow: none;
+  }
+  
+  40% {
+    color: #fff900;
+    text-shadow: 0 0 7px #fff900, 0 0 50px #ff6c00;
+  }
+  
+  60% {
+    color: black;
+    text-shadow: none;
+  }
+  
+  80% {
+    color: black;
+    text-shadow: none;
+  }
+  
+  100% {
+    color: black;
+    text-shadow: none;
+  }
+  
+}
+
+ul li:nth-child(1) {
+  animation-delay: .2s;
+}
+
+ul.our-team li:nth-child(2) {
+  animation-delay: .4s;
+}
+
+ul.our-team li:nth-child(3) {
+  animation-delay: .6s;
+}
+
+ul.our-team li:nth-child(5) {
+  animation-delay: .8s;
+}
+
+ul.our-team li:nth-child(6) {
+  animation-delay: 1s;
+}
+
+ul.our-team li:nth-child(7) {
+  animation-delay: 1.2s;
+}
+
+ul.our-team li:nth-child(8) {
+  animation-delay: 1.4s;
+}
+
+@media screen and (max-width: 980px) {
+  
+  ul.our-team li {
+    font-size: 30px;
+    letter-spacing: 0;
+  }
+  
 }
