--- a/Style.css
+++ b/Style.css
@@ -13,7 +13,8 @@ html,body{
 }
 
 .imagecontainer img {  
-  overflow: auto;
+  filter: opacity(60%);
+  overflow: hidden;
  }
 
  .grid-items{
@@ -23,6 +24,7 @@ html,body{
 
  /* our team */
  h1{
+  z-index: 2;
   text-align: center;
   font-size: 100px;
  }
