--- a/style.css
+++ b/style.css
@@ -64,6 +64,50 @@ ul.our-team li {
   padding: 2rem 0rem;
 }
 
+/* cards */
+
+.card-section-webd .card{
+  border: 0.2rem solid #fff;
+  box-shadow: 0 0 .1rem #fff,
+            0 0 .1rem #fff,
+            0 0 1rem #bc13fe,
+            0 0 0.4rem #bc13fe,
+            0 0 1.3rem #bc13fe,
+            inset 0 0 0.3rem #bc13fe;
+  animation: pulsate 3s linear infinite ;
+}
+@keyframes pulsate {
+    
+  100% {
+
+      box-shadow:
+      0 0 5px #fff,
+      0 0 6px #fff,
+      0 0 12px #fff,
+      0 0 13px #bc13fe,
+      0 0 15px #bc13fe,
+      0 0 25px #bc13fe,
+      0 0 30px #bc13fe,
+      0 0 40px #bc13fe;
+  
+  }
+
+  
+  0% {
+
+    box-shadow:
+    0 0 1px #fff,
+    0 0 1px #fff,
+    0 0 2px #fff,
+    0 0 3px #bc13fe,
+    0 0 5px #bc13fe,
+    0 0 15px #bc13fe,
+    0 0 20px #bc13fe,
+    0 0 30px #bc13fe;
+
+}
+}
+
 /* animation */
 @keyframes pre-load {
   
@@ -134,5 +178,39 @@ ul.our-team li:nth-child(8) {
     letter-spacing: 0;
   }
   
+}
+
+/* utility class for gradient border */
+.gradient-border {
+  --borderWidth: 5px;
+  background: #1D1F20;
+  position: relative;
+  border-radius: var(--borderWidth);
+}
+.gradient-border:after {
+  content: '';
+  position: absolute;
+  top: calc(-1 * var(--borderWidth));
+  left: calc(-1 * var(--borderWidth));
+  height: calc(100% + var(--borderWidth) * 2);
+  width: calc(100% + var(--borderWidth) * 2);
+  background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
+  border-radius: calc(2 * var(--borderWidth));
+  z-index: -1;
+  animation: animatedgradient 1s ease alternate infinite;
+  background-size: 300% 300%;
+}
+
+
+@keyframes animatedgradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
