--- a/style.css
+++ b/style.css
@@ -218,3 +218,85 @@ ul.our-team li:nth-child(8) {
 	}
 }
 
+.neon-animation-1 {
+  position: relative;
+  border: none;
+  z-index: 2;
+  padding: 3px;
+}
+.neon-animation-1:before,
+.neon-animation-1:after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 50%;
+  border: 4px solid;
+  border-radius: 3px;
+  z-index: -1;
+  transition: all 0.3s ease;
+  
+}
+.neon-animation-1:before{
+   top: 0;
+   left: 0;
+   border-bottom-color: transparent;
+   border-right-color: transparent;
+   border-top-color: aqua;
+   border-left-color: aqua;
+   box-shadow: 0 0 18px aqua;
+}
+.neon-animation-1:after{
+   bottom: 0;
+   right: 0;
+   border-top-color: transparent;
+   border-left-color: transparent;
+   border-bottom-color:aqua;
+   border-right-color: aqua;
+   box-shadow: 0 0 18px aqua;
+}
+.neon-animation-1:hover:before,
+.neon-animation-1:hover:after {
+  /* color: #21ebff; */
+  border-color:rgb(40, 252, 252);
+  height: 100%;
+  width: 100%;
+  box-shadow: 0 0 20px rgb(40, 252, 252);
+}
+/* ------------------------------------ */
+
+.neon-animation-2 {
+  background: #21ebff;
+  line-height: 42px;
+  padding: 0;
+}
+.neon-animation-2:hover{
+  background: transparent;
+  color: #21ebff;
+  transition:all 0.5s ease;
+}
+.neon-animation-2:before,
+.neon-animation-2:after{
+  content:'';
+  position:absolute;
+  top:0;
+  right:0;
+  height:5px;
+  background: #21ebff;
+  width:0;
+  box-shadow:  0 0 17px #21ebff,  0 0 7px #21ebff inset;
+  border-radius:5px;
+  transition:400ms ease all;
+}
+.neon-animation-2:after{
+  right:inherit;
+  top:inherit;
+  left:0;
+  bottom:0;
+}
+.neon-animation-2:hover:before,
+.neon-animation-2:hover:after{
+  background: transparent;
+  height: 100%;
+  width:100%;
+  transition:400ms ease all;
+}
