--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ ul.our-team li {
 /* teams */
 .teams-container{
   display: grid;
+  padding-bottom: 50px;
 }
 
 .grid-items{
@@ -222,25 +223,26 @@ ul.our-team li:nth-child(8) {
   position: relative;
   border: none;
   z-index: 2;
-  padding: 3px;
+  padding: 5px;
+  border-radius: 5px;
 }
 .neon-animation-1:before,
 .neon-animation-1:after {
   position: absolute;
   content: "";
   width: 100%;
-  height: 50%;
-  border: 4px solid;
-  border-radius: 3px;
+  height: 21%;
+  border: 5px solid;
+  border-radius: 4px;
   z-index: -1;
-  transition: all 0.3s ease;
-  
+  transition: all 0.3s ease;  
 }
 .neon-animation-1:before{
    top: 0;
    left: 0;
    border-bottom-color: transparent;
-   border-right-color: transparent;
+   /* border-right-color: transparent; */
+   border-right-color: aqua;
    border-top-color: aqua;
    border-left-color: aqua;
    box-shadow: 0 0 18px aqua;
@@ -249,18 +251,18 @@ ul.our-team li:nth-child(8) {
    bottom: 0;
    right: 0;
    border-top-color: transparent;
-   border-left-color: transparent;
+   border-left-color: aqua;
    border-bottom-color:aqua;
    border-right-color: aqua;
+
    box-shadow: 0 0 18px aqua;
 }
 .neon-animation-1:hover:before,
 .neon-animation-1:hover:after {
-  /* color: #21ebff; */
   border-color:rgb(40, 252, 252);
   height: 100%;
   width: 100%;
-  box-shadow: 0 0 20px rgb(40, 252, 252);
+  box-shadow: 0 0 22px rgb(40, 252, 252);
 }
 /* ------------------------------------ */
 
@@ -283,7 +285,7 @@ ul.our-team li:nth-child(8) {
   height:5px;
   background: #21ebff;
   width:0;
-  box-shadow:  0 0 17px #21ebff,  0 0 7px #21ebff inset;
+  box-shadow:  0 0 17px #21ebff,  0 0 17px #21ebff;
   border-radius:5px;
   transition:400ms ease all;
 }
@@ -291,7 +293,7 @@ ul.our-team li:nth-child(8) {
   right:inherit;
   top:inherit;
   left:0;
-  bottom:0;
+  bottom:0;  
 }
 .neon-animation-2:hover:before,
 .neon-animation-2:hover:after{
