--- a/style.css
+++ b/style.css
@@ -27,6 +27,24 @@ html,body{
   background-color: rgba(255, 251, 251, 0.5); /* Adjust the last value (0.5) for opacity */
 }
 
+/* Scroll icon */
+.scroll{
+  text-align: center;
+  background: linear-gradient(60deg, #f23812, rgb(203, 6, 62), #ad03cb, #0344c7, #018094, #015f52);
+  -webkit-background-clip: text;
+  color: transparent;
+  font-size: 20px;
+  z-index: 2;
+  height: 18%;
+  display: block;
+  position: relative;
+  top:27%;
+  right:30%;
+}
+.scroll>a>img{
+  height: 100%;
+}
+
  /* our team */
  h1{
   z-index: 2;
@@ -67,6 +85,7 @@ ul.our-team li {
 }
 .team h1{
   padding: 2rem 0rem;
+  color: bisque;
 }
 
 /* cards */
