--- a/style.css
+++ b/style.css
@@ -205,6 +205,7 @@ ul.our-team li:nth-child(8) {
 }
 
 /* utility class for gradient border */
+/* Animated border 1 */
 .gradient-border {
   --borderWidth: 5px;
   background: #1D1F20;
@@ -238,6 +239,7 @@ ul.our-team li:nth-child(8) {
 	}
 }
 
+/* Hover effect 1 ( + border ) */
 .neon-animation-1 {
   position: relative;
   border: none;
@@ -283,8 +285,9 @@ ul.our-team li:nth-child(8) {
   width: 100%;
   box-shadow: 0 0 22px rgb(40, 252, 252);
 }
-/* ------------------------------------ */
 
+/* ------------------------------------ */
+/* Hover effect 2 */
 .neon-animation-2 {
   background: #21ebff;
   line-height: 42px;
@@ -300,6 +303,7 @@ ul.our-team li:nth-child(8) {
   content:'';
   position:absolute;
   top:0;
+  z-index: 1;
   right:0;
   height:5px;
   background: #21ebff;
@@ -320,4 +324,41 @@ ul.our-team li:nth-child(8) {
   height: 100%;
   width:100%;
   transition:400ms ease all;
+}
+
+/* ---------------------------- */
+/* Animated border 2 */
+.animate-border:before, .animate-border:after {
+	content: '';
+	position: absolute;
+	left: -2px;
+	top: -2px;
+	background: linear-gradient(45deg, #fb0094, #0000ff, #00ff00,#ffff00, #ff0000, #fb0094, 
+		#0000ff, #00ff00,#ffff00, #ff0000);
+	background-size: 350%;
+	width: calc(100% + 4px);
+	height: calc(100% + 4px);
+	z-index: -1;
+	animation: steam 20s linear infinite;
+}
+
+@keyframes steam {
+	0% {
+		background-position: 0 0;
+	}
+	50% {
+		background-position: 350% 0;
+	}
+	100% {
+		background-position: 0 0;
+	}
+}
+
+.animate-border:after {
+	filter: blur(35px);
+}
+
+.animate-border:hover{ /* another way of hover and background (animate-border: for border)*/
+  box-shadow:  0 0 20px #d9e1e2,  0 0 17px #c4f2f2;
+  color: white;
 }
