--- a/style.css
+++ b/style.css
@@ -10,12 +10,14 @@ html,body{
 .imagecontainer{
   height: 100%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   background-image: url("https://source.unsplash.com/1268x700/?team");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  /* overflow:auto; */
 }
 .imagecontainer::before {
   content: "";
@@ -27,41 +29,14 @@ html,body{
   background-color: rgba(255, 251, 251, 0.5); /* Adjust the last value (0.5) for opacity */
 }
 
-/* Scroll icon */
-.scroll{
+.flex-item-1, .flex-item-2{
+  flex: 100%;
   text-align: center;
-  background: linear-gradient(60deg, #f23812, rgb(203, 6, 62), #ad03cb, #0344c7, #018094, #015f52);
-  -webkit-background-clip: text;
-  color: transparent;
-  font-size: 20px;
   z-index: 2;
-  height: 18%;
-  display: block;
-  position: relative;
-  top:27%;
-  right:30%;
-}
-.scroll>a>img{
-  height: 100%;
-}
-/* Up-Down scroll animation */
-.scroll {
-  animation-duration: 2s;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: infinite;
-  animation-name: upDown;
 }
 
-@keyframes upDown {
-  0% {
-    transform: translateY(-15px);
-  }
-  50% {
-    transform: translateY(0);
-  }
-  100% {
-    transform: translateY(-15px);
-  }
+.flex-item-1{
+  padding-top: 70px;
 }
 
  /* our team */
@@ -79,79 +54,7 @@ ul.our-team li {
   animation: pre-load 3s linear infinite;
 }
 
-
-/* animated bg */
-#container {
-  height: 100%;
-  overflow: auto;
-  position: relative;
-  touch-action: none;
-}
-
-/* teams */
-.teams-container{
-  display: grid;
-  padding-bottom: 50px;
-}
-
-.grid-items{
-  grid-row:1;
-  grid-column: 1;
- }
-
-.team{
-  z-index: 2;
-}
-.team h1{
-  padding: 2rem 0rem;
-  color: bisque;
-}
-
-/* cards */
-
-.card-section-webd .card{
-  border: 0.2rem solid #fff;
-  box-shadow: 0 0 .1rem #fff,
-            0 0 .1rem #fff,
-            0 0 1rem #bc13fe,
-            0 0 0.4rem #bc13fe,
-            0 0 1.3rem #bc13fe,
-            inset 0 0 0.3rem #bc13fe;
-  animation: pulsate 3s linear infinite ;
-}
-@keyframes pulsate {
-    
-  100% {
-
-      box-shadow:
-      0 0 5px #fff,
-      0 0 6px #fff,
-      0 0 12px #fff,
-      0 0 13px #bc13fe,
-      0 0 15px #bc13fe,
-      0 0 25px #bc13fe,
-      0 0 30px #bc13fe,
-      0 0 40px #bc13fe;
-  
-  }
-
-  
-  0% {
-
-    box-shadow:
-    0 0 1px #fff,
-    0 0 1px #fff,
-    0 0 2px #fff,
-    0 0 3px #bc13fe,
-    0 0 5px #bc13fe,
-    0 0 15px #bc13fe,
-    0 0 20px #bc13fe,
-    0 0 30px #bc13fe;
-
-}
-}
-
-/* animation */
+/* animation for 'OUR TEAM' */
 @keyframes pre-load {
   
   0% {
@@ -217,10 +120,122 @@ ul.our-team li:nth-child(8) {
 @media screen and (max-width: 980px) {
   
   ul.our-team li {
-    font-size: 30px;
+    font-size: 35px;
     letter-spacing: 0;
   }
   
+}
+
+/* Scroll icon */
+.scroll{
+  text-align: center;
+  background: linear-gradient(90deg,#f23812, rgb(203, 6, 85), #cb0349, #043aa6, #018094, #015f52);
+  -webkit-background-clip: text;
+  color: transparent;
+  font-size: 20.3px;
+  height: 18%;
+  display: block;
+  
+}
+.scroll>a>img{
+  height: 100%;
+  vertical-align: text-bottom;
+}
+/* .scroll a{
+  vertical-align: text-bottom;
+} */
+
+/* Up-Down scroll animation */
+.scroll {
+  animation-duration: 2s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-name: upDown;
+}
+
+@keyframes upDown {
+  0% {
+    transform: translateY(-15px);
+  }
+  50% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-15px);
+  }
+}
+
+
+/* animated bg */
+#container {
+  height: 100%;
+  overflow: auto;
+  position: relative;
+  touch-action: none;
+}
+
+/* teams */
+.teams-container{
+  display: grid;
+  padding-bottom: 50px;
+}
+
+.grid-items{
+  grid-row:1;
+  grid-column: 1;
+ }
+
+.team{
+  z-index: 2;
+}
+.team h1{
+  padding: 2rem 0rem;
+  color: bisque;
+  font-size: 8vh;
+  /* font-size: 6vw; */
+}
+
+/* cards border */
+
+.card-section-webd .card{
+  border: 0.2rem solid #fff;
+  box-shadow: 0 0 .1rem #fff,
+            0 0 .1rem #fff,
+            0 0 1rem #bc13fe,
+            0 0 0.4rem #bc13fe,
+            0 0 1.3rem #bc13fe,
+            inset 0 0 0.3rem #bc13fe;
+  animation: pulsate 3s linear infinite ;
+}
+@keyframes pulsate {
+    
+  100% {
+
+      box-shadow:
+      0 0 5px #fff,
+      0 0 6px #fff,
+      0 0 12px #fff,
+      0 0 13px #bc13fe,
+      0 0 15px #bc13fe,
+      0 0 25px #bc13fe,
+      0 0 30px #bc13fe,
+      0 0 40px #bc13fe;
+  
+  }
+  
+  0% {
+
+    box-shadow:
+    0 0 1px #fff,
+    0 0 1px #fff,
+    0 0 2px #fff,
+    0 0 3px #bc13fe,
+    0 0 5px #bc13fe,
+    0 0 15px #bc13fe,
+    0 0 20px #bc13fe,
+    0 0 30px #bc13fe;
+
+}
 }
 
 /* utility class for gradient border */
@@ -480,8 +495,6 @@ ul.our-team li:nth-child(8) {
   animation-duration: 11s;
 }
 
-
-
 @keyframes animate {
 
   0%{
@@ -497,3 +510,7 @@ ul.our-team li:nth-child(8) {
   }
 
 }
+
+/* .teams-container{
+  background:linear-gradient(45deg, rgb(120, 69, 120), rgb(106, 64, 137), rgb(50, 50, 106), rgb(56, 106, 56), rgb(100, 100, 50), rgb(120, 100, 63),rgb(122, 65, 65))
+} */
