--- a/style.css
+++ b/style.css
@@ -35,16 +35,13 @@ html,body{
   z-index: 2;
 }
 
-.flex-item-1{
-  padding-top: 70px;
+.flex-item-1 h1{
+  /* font-size: 100px; */
+  font-size: 7.5vmax;
+  padding-top: 10vh;
 }
-
  /* our team */
- h1{
-  z-index: 2;
-  text-align: center;
-  font-size: 100px;
- }
+
 
 ul.our-team li {
   list-style: none;
@@ -133,7 +130,8 @@ ul.our-team li:nth-child(8) {
   -webkit-background-clip: text;
   color: transparent;
   font-size: 20.3px;
-  height: 18%;
+  height: 8.3vmax;
+  /* height: 18%; */
   display: block;
   
 }
@@ -141,9 +139,7 @@ ul.our-team li:nth-child(8) {
   height: 100%;
   vertical-align: text-bottom;
 }
-/* .scroll a{
-  vertical-align: text-bottom;
-} */
+
 
 /* Up-Down scroll animation */
 .scroll {
@@ -185,14 +181,16 @@ ul.our-team li:nth-child(8) {
   grid-column: 1;
  }
 
-.team{
-  z-index: 2;
-}
 .team h1{
-  padding: 2rem 0rem;
-  color: bisque;
-  font-size: 8vh;
-  /* font-size: 6vw; */
+  z-index: 2;
+  text-align: center;
+  padding: 1rem 0rem;
+  color:honeydew;
+  font-size: 3.5vmax;
+  margin: 3vmax 2.3vmax;
+  /* border-radius: 8px;
+  box-shadow: 0 0 10px rgb(54, 49, 49);
+  background-color: rgba(131, 130, 130, 0.1); */
 }
 
 /* cards border */
