--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ html,body{
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  /* overflow:auto; */
 }
 .imagecontainer::before {
   content: "";
@@ -137,7 +136,6 @@ ul.our-team li:nth-child(8) {
 }
 .scroll>a>img{
   height: 100%;
-  vertical-align: text-bottom;
 }
 
 
@@ -181,8 +179,10 @@ ul.our-team li:nth-child(8) {
   grid-column: 1;
  }
 
-.team h1{
+.team{
   z-index: 2;
+}
+.team h1{
   text-align: center;
   padding: 1rem 0rem;
   color:honeydew;
@@ -335,7 +335,7 @@ ul.our-team li:nth-child(8) {
   content:'';
   position:absolute;
   top:0;
-  z-index: 1;
+  z-index: 3;
   right:0;
   height:5px;
   background: #21ebff;
