--- a/style.css
+++ b/style.css
@@ -2,7 +2,19 @@
   margin : 0; 
   padding :0;
 }
+/* utility font classes */
+.minecraft-font{
+  font-family: 'Press Start 2P';
+}
+.wavy-font{
+  font-family: 'Dancing Script', cursive;
+}
+
 html,body{
+  background-image: url("/img/BG.png");
+  background-attachment: fixed;
+  background-size: contain;
+  background-color: #00040f;
   height: 100%;
 }
 
@@ -37,7 +49,6 @@ html,body{
 .flex-item-1 h1{
   /* font-size: 100px; */
   font-size: 7.5vmax;
-  padding-top: 10vh;
 }
  /* our team */
 
@@ -49,7 +60,6 @@ ul.our-team li {
   letter-spacing: 15px;
   animation: pre-load 3s linear infinite;
 }
-
 /* animation for 'OUR TEAM' */
 @keyframes pre-load {
   
@@ -125,6 +135,7 @@ ul.our-team li:nth-child(8) {
 
 /* teams */
 .teams-container{
+  background-position: center;
   display: grid;
   padding-bottom: 50px;
 }
@@ -138,224 +149,68 @@ ul.our-team li:nth-child(8) {
   z-index: 2;
 }
 
+/* animation behing team name */
+@keyframes a3{
+  25% {background-position: 0 0   ,100% 100%,100% calc(100% - 5px)}
+  50% {background-position: 0 100%,100% 100%,0    calc(100% - 5px)}
+  75% {background-position: 0 100%,100%    0,100% 5px}
+}
+@keyframes a5-1{ 
+  0% {clip-path: polygon(50% 50%,100%   0,100% 0,0 0,0 100%,100% 100%,100% 100%)}
+100% {clip-path: polygon(50% 50%,100% 65%,100% 0,0 0,0 100%,100% 100%,100%  35%)}
+}
+
+@keyframes a5-2{ 
+100% {transform: translate(90px)}
+}
+
+@keyframes a5-0{ 
+100% {background-size:120% 100%,20% 100%}
+}
+
 .team h1{
+  font-family: "Press Start 2P", sans-serif;
+  text-shadow: 0 0 3px greenyellow;
   text-align: center;
   color:honeydew;
   font-size: 3.5vmax;
   margin: 8vmax 0 5vmax 0;
-  background: linear-gradient(90deg,rgb(242, 55, 18, 0.65), rgb(203, 6, 85, 0.65), rgb(201, 3, 72, 0.65), rgb(5, 58, 163, 0.65), #018094, rgb(0, 97, 84, 0.65));
+  
+  background:
+  linear-gradient(#ffffff 0 0) 0    0/8px 20px,
+  linear-gradient(#ffffff 0 0) 100% 0/8px 20px,
+  radial-gradient(farthest-side,yellow 90%,#0000) 0 5px/8px 8px content-box,
+  #000;
+  animation: a3 4s infinite linear;
   outline: 1px solid grey;
   outline-offset: 7px;
+  background-repeat: no-repeat; 
+
 }
 
-/* cards border */
-
+/* team cards */
 div.card-team{
-  background-color: rgb(128, 128, 128, 0.15);
   padding: 4.5vmax 0;
 }
-
-.card-section-webd .card{
-  border: 0.2rem solid #fff;
-  box-shadow: 0 0 .1rem #fff,
-            0 0 .1rem #fff,
-            0 0 1rem #bc13fe,
-            0 0 0.4rem #bc13fe,
-            0 0 1.3rem #bc13fe,
-            inset 0 0 0.3rem #bc13fe;
-  animation: pulsate 3s linear infinite ;
-}
-@keyframes pulsate {
-    
-  100% {
-
-      box-shadow:
-      0 0 5px #fff,
-      0 0 6px #fff,
-      0 0 12px #fff,
-      0 0 13px #bc13fe,
-      0 0 15px #bc13fe,
-      0 0 25px #bc13fe,
-      0 0 30px #bc13fe,
-      0 0 40px #bc13fe;
-  
-  }
-  
-  0% {
-
-    box-shadow:
-    0 0 1px #fff,
-    0 0 1px #fff,
-    0 0 2px #fff,
-    0 0 3px #bc13fe,
-    0 0 5px #bc13fe,
-    0 0 15px #bc13fe,
-    0 0 20px #bc13fe,
-    0 0 30px #bc13fe;
+.card{
+border-bottom-right-radius: 15px!important;
+border-bottom-left-radius: 15px!important;
+border-top-color: rgb(255, 0, 128) !important;
+border-left-color: rgb(17, 226, 216) !important;
+border-right-color: #00ff00 !important;
+border-bottom-color: rgb(248, 233, 24) !important;
+background-color: #00040f44 !important;
+color: white;
 
 }
-}
 
-/* utility class for gradient border */
-/* Animated border 1 */
-.gradient-border {
-  --borderWidth: 5px;
-  background: #1D1F20;
-  position: relative;
-  border-radius: var(--borderWidth);
+.card-body{
+  background-color: rgba(255, 255, 255, 0.03);
 }
-.gradient-border:after {
-  content: '';
-  position: absolute;
-  top: calc(-1 * var(--borderWidth));
-  left: calc(-1 * var(--borderWidth));
-  height: calc(100% + var(--borderWidth) * 2);
-  width: calc(100% + var(--borderWidth) * 2);
-  background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
-  border-radius: calc(2 * var(--borderWidth));
-  z-index: -1;
-  animation: animatedgradient 1s ease alternate infinite;
-  background-size: 300% 300%;
+.card-body::backdrop{
+filter: blur(8px);
+-webkit-filter: blur(8px); 
 }
-
-
-@keyframes animatedgradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
-}
-
-/* Hover effect 1 ( + border ) */
-.neon-animation-1 {
-  position: relative;
-  border: none;
-  z-index: 2;
-  padding: 5px;
-  border-radius: 5px;
-}
-.neon-animation-1:before,
-.neon-animation-1:after {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 21%;
-  border: 5px solid;
-  border-radius: 4px;
-  z-index: -1;
-  transition: all 0.3s ease;  
-}
-.neon-animation-1:before{
-   top: 0;
-   left: 0;
-   border-bottom-color: transparent;
-   /* border-right-color: transparent; */
-   border-right-color: aqua;
-   border-top-color: aqua;
-   border-left-color: aqua;
-   box-shadow: 0 0 18px aqua;
-}
-.neon-animation-1:after{
-   bottom: 0;
-   right: 0;
-   border-top-color: transparent;
-   border-left-color: aqua;
-   border-bottom-color:aqua;
-   border-right-color: aqua;
-
-   box-shadow: 0 0 18px aqua;
-}
-.neon-animation-1:hover:before,
-.neon-animation-1:hover:after {
-  border-color:rgb(40, 252, 252);
-  height: 100%;
-  width: 100%;
-  box-shadow: 0 0 22px rgb(40, 252, 252);
-}
-
-/* ------------------------------------ */
-/* Hover effect 2 */
-.neon-animation-2 {
-  background: #21ebff;
-  line-height: 42px;
-  padding: 0;
-}
-.neon-animation-2:hover{
-  background: transparent;
-  color: #21ebff;
-  transition:all 0.5s ease;
-}
-.neon-animation-2:before,
-.neon-animation-2:after{
-  content:'';
-  position:absolute;
-  top:0;
-  z-index: 3;
-  right:0;
-  height:5px;
-  background: #21ebff;
-  width:0;
-  box-shadow:  0 0 17px #21ebff,  0 0 17px #21ebff;
-  border-radius:5px;
-  transition:400ms ease all;
-}
-.neon-animation-2:after{
-  right:inherit;
-  top:inherit;
-  left:0;
-  bottom:0;  
-}
-.neon-animation-2:hover:before,
-.neon-animation-2:hover:after{
-  background: transparent;
-  height: 100%;
-  width:100%;
-  transition:400ms ease all;
-}
-
-/* ---------------------------- */
-/* Animated border 2 */
-.animate-border:before, .animate-border:after {
-	content: '';
-	position: absolute;
-	left: -2px;
-	top: -2px;
-	background: linear-gradient(45deg, #fb0094, #0000ff, #00ff00,#ffff00, #ff0000, #fb0094, 
-		#0000ff, #00ff00,#ffff00, #ff0000);
-	background-size: 350%;
-	width: calc(100% + 4px);
-	height: calc(100% + 4px);
-	z-index: -1;
-	animation: steam 20s linear infinite;
-}
-
-@keyframes steam {
-	0% {
-		background-position: 0 0;
-	}
-	50% {
-		background-position: 350% 0;
-	}
-	100% {
-		background-position: 0 0;
-	}
-}
-
-.animate-border:after {
-	filter: blur(35px);
-}
-
-.animate-border:hover{ /* another way of hover and background (animate-border: for border)*/
-  box-shadow:  0 0 20px #d9e1e2,  0 0 17px #c4f2f2;
-  color: white;
-}
-
-/* Background */
 .circles{
   position: absolute;
   top: 0;
