--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 
 html,body{
-  background-image: url("/img/BG.png");
+  background-image: url("img/BG.png");
   background-attachment: fixed;
   background-size: contain;
   background-color: #00040f;
