--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 
 html,body{
-  background-image: url("img/BG.png");
+  background-image: url("https://github.com/PurviSaini/Team-Page-Taarangana-24/blob/main/img/BG.png?raw=true");
   background-attachment: fixed;
   background-size: contain;
   background-color: #00040f;
