--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 
 html,body{
-  background-image: url("https://github.com/PurviSaini/Team-Page-Taarangana-24/blob/main/img/BG.png?raw=true");
+  background-image: url("https://github.com/Catsandsoup/Team-Page-Taarangana-24/blob/main/img/bg2.jpeg");
   background-attachment: fixed;
   background-size: contain;
   background-color: #00040f;
