--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ html,body{
   background-size: cover;*/
   height: 100%;
   display: flex;
-  background-image: url("our team final final.png");
+  background-image: url("img/meetOurTeam.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
