--- a/style.css
+++ b/style.css
@@ -238,11 +238,12 @@ div.card-team {
 }
 .card:hover {
   transform: scale(1.1) !important;
-  transition: 5ms !important;
-  border: conic-gradient(#144207, #f0e15a, #a9224d) !important;
-  animation: rotate 1s linear infinite !important;
-  border-width: 5px !important;
+  color: honeydew;
+  text-shadow: 0 2px 2px greenyellow;
+  border-width: 3px !important;
+  border-style: dashed;
 }
+ 
 .card::after {
   filter: blur(10rem) !important;
   background: conic-gradient(#144207, #f0e15a, #a9224d) !important;
@@ -257,6 +258,7 @@ div.card-team {
   filter: blur(8px);
   -webkit-filter: blur(8px);
 }
+
 .circles {
   position: absolute;
   top: 0;
@@ -366,18 +368,10 @@ div.card-team {
     border-radius: 50%;
   }
 }
-@keyframes rotate {
-  0% {
-    filter: hue-rotate(0deg);
-  }
-
-  100% {
-    filter: hue-rotate(360deg);
-  }
-}
 
 @media (max-width: 555px) {
   .imagecontainer {
     background-position: left;
   }
 }
+
